<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.datacapstonedesign</groupId>
	<artifactId>backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>backend</name>
	<description>3-2 khu data analysis capstone design</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>

	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-elasticsearch</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.uuid</groupId>
			<artifactId>java-uuid-generator</artifactId>
			<version>4.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>2.2.16</version>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>

		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>7.4.0</version>
				<configuration>
					<generateApiTests>false</generateApiTests>
					<generateApiDocumentation>false</generateApiDocumentation>
					<generateModelTests>false</generateModelTests>
					<generateModelDocumentation>false</generateModelDocumentation>
				</configuration>
				<executions>
					<execution>
						<id>generate-server</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatorName>spring</generatorName>
							<inputSpec>${project.basedir}/src/main/resources/openapi/openapi.yml</inputSpec>
							<output>${project.build.directory}/generated-sources/backend-java-spring-package</output>
							<modelPackage>org.datacapstonedesign.backend.generated.dto</modelPackage>
							<apiPackage>org.datacapstonedesign.backend.generated.api</apiPackage>
							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
							<configOptions>
								<title>backend</title>
								<delegatePattern>true</delegatePattern>
								<useSpringBoot3>true</useSpringBoot3>
								<useTags>true</useTags>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>generate-client</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<generatorName>typescript-axios</generatorName>
							<inputSpec>${project.basedir}/src/main/resources/openapi/openapi.yml</inputSpec>
							<output>${project.build.directory}/generated-sources/frontend-ts-axios-package</output>
							<configOptions>
								<npmName>@datacapstonedesign/tech-blog-hub-api</npmName>
								<npmVersion>${project.version}</npmVersion>
								<npmRepository>https://npm.pkg.github.com</npmRepository>
							</configOptions>
							<additionalProperties>
								<additionalProperty>withSeparateModelsAndApi=true</additionalProperty>
								<additionalProperty>apiPackage=api</additionalProperty>
								<additionalProperty>modelPackage=model</additionalProperty>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>exclude-commons-logging</id>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<excludeGroupIds>commons-logging</excludeGroupIds>
							<excludeArtifactIds>commons-logging</excludeArtifactIds>
						</configuration>
					</execution>
				</executions>
			</plugin>


		</plugins>
	</build>

</project>
